loadeR.2nc
==========

* Bug fix in date definition, affecting monthly datasets only
