@@ -1,11 +1,14 @@
-#' @title Maximum temperature grid dataset
-#' @description A Grid containing data of summer maximum 2m temperature for the Mediterranean (2001-2010)
+#' @title Maximum temperature daily grid dataset
+#' @description A climate4R grid containing daily data of summer maximum 2m temperature for the Mediterranean (2001-2010)
 #' @name tx
 #' @docType data
-#' @author Santander MetGroup (http://meteo.unican.es)
-#' @source Data from the WATCH Forcing Dataset ERA-Interim retrieved from the ECOMS User Data Gateway (http://meteo.unican.es/trac/wiki/udg/ecoms).   
-#' @references Weedon, G.P et al. 2011. Creation of the WATCH Forcing Data and its Use to Assess Global and Regional Reference Crop Evaporation over Land during the Twentieth Century. Journal of Hydrometeorology 12, 823-848. doi:10.1175/2011JHM1369.1
+#' @author Santander Meteorology Group (http://meteo.unican.es)
+#' @source Data from the WATCH Forcing Dataset ERA-Interim (Weedon et al. 2011) retrieved from the ECOMS User Data Gateway (\url{http://meteo.unican.es/ecoms-udg}).   
+#' @references 
+#' Weedon, G.P et al. 2011. Creation of the WATCH Forcing Data and its Use to Assess Global and Regional Reference Crop Evaporation over Land during the Twentieth Century. Journal of Hydrometeorology 12, 823-848. doi:10.1175/2011JHM1369.1
+#' 
+#' climate4R page \url{http://meteo.unican.es/climate4R}
 #' @keywords data
 #' @usage data(tx)
-#' @format a \pkg{loadeR} grid
+#' @format a climate4R grid
 NULL
